k8s/app-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: cn-demo
  name: cn-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: cn-demo
  template:
    metadata:
      labels:
        run: cn-demo
    spec:
      containers:
      - image: javaplus/cloud-native-demo:1
        imagePullPolicy: IfNotPresent
        name: cloud-native-demo
        command:
          - sh
          - -c
          - |
            python app.py --redis-host $(REDIS_HOST)
        resources:
          limits:
            cpu: 1
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 2
